--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Practica2.3 - Configuracion de Proxy Inverso
+site_name: Practica2.5 - Configuracion de SSL
 nav:  
   - Home: https://yahyalimouni.github.io
   - Practica2.1: https://yahyalimouni.github.io/practica2/
